--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 		          		<span class="subheading">Hello!</span>
 			            <h1 class="mb-4 mt-3">I'm <span>Amal Joy Maliakkal</span></h1>
 			            <h2 class="mb-4">An UI/UX Developer</h2>
-			            <p><a href="#" class="btn btn-primary py-3 px-5 mb-3">Download CV</a> <a href="#" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
+			            <p><a href="#" class="btn btn-primary py-3 px-5 mb-3">Download CV</a> <a href="#" class="btn btn-white btn-outline-white py-3 px-4 mb-3">My works</a></p>
 		            </div>
 		          </div>
 	        	</div>
@@ -102,21 +102,21 @@
 		          <div class="col-md-12 heading-section ftco-animate">
 		          	<h1 class="big">About</h1>
 		            <h2 class="mb-4">About Me</h2>
-		            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+		            <p>An energetic, Passionate and commited and eager to learn UI/UX Developer  with 2 years of experience</p>
 		            <ul class="about-info mt-4 px-md-0 px-2">
-		            	<li class="d-flex"><span>Name:</span> <span>Clark Thompson</span></li>
-		            	<li class="d-flex"><span>Date of birth:</span> <span>January 01, 1987</span></li>
-		            	<li class="d-flex"><span>Address:</span> <span>San Francisco CA 97987 USA</span></li>
-		            	<li class="d-flex"><span>Zip code:</span> <span>1000</span></li>
-		            	<li class="d-flex"><span>Email:</span> <span>clarkthomp@gmail.com</span></li>
-		            	<li class="d-flex"><span>Phone: </span> <span>+1-2234-5678-9-0</span></li>
+		            	<li class="d-flex"><span>Name:</span> <span>Amal Joy</span></li>
+		            	<li class="d-flex"><span>Date of birth:</span> <span>19-02-1996</span></li>
+		            	<li class="d-flex"><span>Address:</span> <span>Maliakkal(h),Kadukutty P.o,Chalakudy</span></li>
+		            	<li class="d-flex"><span>Zip code:</span> <span>680309</span></li>
+		            	<li class="d-flex"><span>Email:</span> <span>amaljoymaliakkal96@gmail.com</span></li>
+		            	<li class="d-flex"><span>Phone: </span> <span>9048699623</span></li>
 		            </ul>
 		          </div>
 		        </div>
 	          <div class="counter-wrap ftco-animate d-flex mt-md-3">
               <div class="text">
               	<p class="mb-4">
-	                <span class="number" data-number="120">0</span>
+	                <span class="number" data-number="25">0</span>
 	                <span>Project complete</span>
                 </p>
                 <p><a href="#" class="btn btn-primary py-3 px-3">Download CV</a></p>
@@ -131,52 +131,54 @@
     	<div class="container">
     		<div class="row justify-content-center pb-5">
           <div class="col-md-10 heading-section text-center ftco-animate">
-          	<h1 class="big big-2">Resume</h1>
-            <h2 class="mb-4">Resume</h2>
-            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+          	<h1 class="big big-2">Experience</h1>
+            <h2 class="mb-4">Experience</h2>
+            <p>A breef description about the companies and jobs i have worked on </p>
           </div>
         </div>
     		<div class="row">
     			<div class="col-md-6">
     				<div class="resume-wrap ftco-animate">
-    					<span class="date">2014-2015</span>
-    					<h2>Master Degree of Design</h2>
-    					<span class="position">Cambridge University</span>
-    					<p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+    					<span class="date">2021-present</span>
+    					<h2>Armia Systems Pvt Ltd</h2>
+    					<span class="position">Junior UI/UX Developer</span>
+    					<p class="mt-4">
+							Developing and conceptualizing a comprehensive UI/UX design strategy for various clients Using NExtjs,React Js,HTML,CSS and producing high-quality UX design solutions through wireframes using adobe XD and Figma.
+						</p>
     				</div>
-    				<div class="resume-wrap ftco-animate">
-    					<span class="date">2014-2015</span>
+    				<!-- <div class="resume-wrap ftco-animate">
+    					<span class="date">2017-2018</span>
     					<h2>Bachelor's Degree of C.A</h2>
     					<span class="position">Cambridge University</span>
     					<p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-    				</div>
-    				<div class="resume-wrap ftco-animate">
-    					<span class="date">2014-2015</span>
+    				</div> -->
+    				<!-- <div class="resume-wrap ftco-animate">
+    					<span class="date">2017-2018</span>
     					<h2>Diploma in Computer</h2>
     					<span class="position">Cambridge University</span>
     					<p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-    				</div>
+    				</div> -->
     			</div>
 
     			<div class="col-md-6">
     				<div class="resume-wrap ftco-animate">
-    					<span class="date">2014-2015</span>
-    					<h2>Art &amp; Creative Director</h2>
-    					<span class="position">Cambridge University</span>
+    					<span class="date">2017-2018</span>
+    					<h2>Computer science teacher</h2>
+    					<span class="position">St Thomas Hss Barnager</span>
     					<p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
     				</div>
-    				<div class="resume-wrap ftco-animate">
+    				<!-- <div class="resume-wrap ftco-animate">
     					<span class="date">2014-2015</span>
     					<h2>Wordpress Developer</h2>
     					<span class="position">Cambridge University</span>
     					<p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-    				</div>
-    				<div class="resume-wrap ftco-animate">
+    				</div> -->
+    				<!-- <div class="resume-wrap ftco-animate">
     					<span class="date">2017-2018</span>
     					<h2>UI/UX Designer</h2>
     					<span class="position">Cambridge University</span>
     					<p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-    				</div>
+    				</div> -->
     			</div>
     		</div>
     		<div class="row justify-content-center mt-5">
