--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 	  
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light site-navbar-target" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html">Clark</a>
+	      <a class="navbar-brand" href="index.html">Amal Joy</a>
 	      <button class="navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-	        <span class="oi oi-menu"></span> Menu
+	        <span class="oi oi-menu"></span> 
 	      </button>
 
 	      <div class="collapse navbar-collapse" id="ftco-nav">
@@ -60,7 +60,7 @@
 		          		<span class="subheading">Hello!</span>
 			            <h1 class="mb-4 mt-3">I'm <span>Amal Joy Maliakkal</span></h1>
 			            <h2 class="mb-4">An UI/UX Developer</h2>
-			            <p><a href="#" class="btn btn-primary py-3 px-5 mb-3">Download CV</a> <a href="#" class="btn btn-white btn-outline-white py-3 px-4 mb-3">My works</a></p>
+			            <p><a href="#" class="btn btn-primary py-3 px-4 mb-3">Download CV</a> <a href="#" class="btn btn-white btn-outline-white py-3 px-4 mb-3">My works</a></p>
 		            </div>
 		          </div>
 	        	</div>
@@ -93,7 +93,7 @@
     			<div class="col-md-6 col-lg-5 d-flex">
     				<div class="img-about img d-flex align-items-stretch">
     					<div class="overlay"></div>
-	    				<div class="img d-flex align-self-stretch align-items-center" style="background-image:url(images/bg_1.png);">
+	    				<div class="img d-flex align-self-stretch align-items-center" style="background-image:url(images/amal-new.png);">
 	    				</div>
     				</div>
     			</div>
