--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 		          		<span class="subheading">Hello!</span>
 			            <h1 class="mb-4 mt-3">I'm <span>Amal Joy Maliakkal</span></h1>
 			            <h2 class="mb-4">An UI/UX Developer</h2>
-			            <p><a class="btn btn-primary py-3 px-4 mb-3"  role="button" href="images/amal_resume.pdf"
-							download="proposed_file_name">Download CV</a>  <a href="#" class="btn btn-white btn-outline-white py-3 px-4 mb-3">My works</a></p>
+			            <p><a class="btn btn-primary py-3 px-4 mb-3"  role="button" href="images/Amal_Joy_resume.pdf"
+							download="amal_joy_cv">Download CV</a>  <a href="#" class="btn btn-white btn-outline-white py-3 px-4 mb-3">My works</a></p>
 		            </div>
 		          </div>
 	        	</div>
@@ -103,7 +103,7 @@
 		          <div class="col-md-12 heading-section ftco-animate">
 		          	<h1 class="big">About</h1>
 		            <h2 class="mb-4">About Me</h2>
-		            <p>An energetic, Passionate and commited and eager to learn UI/UX Developer  with 2 years of experience</p>
+		            <p>An energetic, Passionate,commited and eager to learn UI/UX Developer  with 2+ years of experience.</p>
 		            <ul class="about-info mt-4 px-md-0 px-2">
 		            	<li class="d-flex"><span>Name:</span> <span>Amal Joy</span></li>
 		            	<li class="d-flex"><span>Date of birth:</span> <span>19-02-1996</span></li>
@@ -134,7 +134,7 @@
           <div class="col-md-10 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Experience</h1>
             <h2 class="mb-4">Experience</h2>
-            <p>A breef description about the companies and jobs i have worked on </p>
+            <p>A breef description about the companies and jobs that i have worked on. </p>
           </div>
         </div>
     		<div class="row">
@@ -164,8 +164,10 @@
     			<div class="col-md-6">
     				<div class="resume-wrap ftco-animate">
     					<span class="date">2017-2018</span>
-    					<h2>Computer science teacher</h2>
-    					<span class="position">St Thomas Hss Barnager</span>
+    					<h2>
+							St Thomas Hss Barnager
+						</h2>
+    					<span class="position">Computer science teacher</span>
     					<p class="mt-4">Conducted classes for higher secondary students about Python programming as well as web development.Also Supported them in practical lab session,Also monitored their performances by conducting exams.</p>
     				</div>
     				<!-- <div class="resume-wrap ftco-animate">
@@ -535,24 +537,24 @@
           <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
             <div class="block-18">
               <div class="text">
-                <strong class="number" data-number="100">0</strong>
-                <span>Awards</span>
+                <strong class="number">2+</strong>
+                <span>Years of experience</span>
               </div>
             </div>
           </div>
           <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
             <div class="block-18">
               <div class="text">
-                <strong class="number" data-number="1200">0</strong>
-                <span>Complete Projects</span>
+                <strong class="number" >20+</strong>
+                <span>Completed Projects</span>
               </div>
             </div>
           </div>
           <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
             <div class="block-18">
               <div class="text">
-                <strong class="number" data-number="1200">0</strong>
-                <span>Happy Customers</span>
+                <strong class="number">3+</strong>
+                <span>Freelance Projects</span>
               </div>
             </div>
           </div>
@@ -572,9 +574,9 @@
 			<div class="container">
 				<div class="row justify-content-center">
 					<div class="col-md-7 ftco-animate text-center">
-						<h2>I'm <span>Available</span> for freelancing</h2>
-						<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-						<p class="mb-0"><a href="#" class="btn btn-primary py-3 px-5">Hire me</a></p>
+						<h2 class="available_text">I'm <span class="available_text">Available</span> for freelancing</h2>
+						<p class="freelance_text">I am available part time as a freelance UI/UX developer.</p>
+						<p class="mb-0 cursor_pointer"><a href="#" class="btn btn-primary py-3 px-5 hire_me" id="hire_me">Hire me</a></p>
 					</div>
 				</div>
 			</div>
@@ -586,7 +588,7 @@
           <div class="col-md-7 heading-section text-center ftco-animate">
             <h1 class="big big-2">Contact</h1>
             <h2 class="mb-4">Contact Me</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+            <p>Please feel free to reach me for any works and queries</p>
           </div>
         </div>
 
@@ -596,8 +598,10 @@
           		<div class="icon d-flex align-items-center justify-content-center">
           			<span class="icon-map-signs"></span>
           		</div>
-          		<h3 class="mb-4">Address</h3>
-	            <p>198 West 21th Street, Suite 721 New York NY 10016</p>
+          		<h3 class="mb-4 ">Address</h3>
+	            <p class="address-text">Maliakkal(H), Kadukutty P.O, Thrissur(Dist)
+					Pin:680309
+				</p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -606,7 +610,7 @@
           			<span class="icon-phone2"></span>
           		</div>
           		<h3 class="mb-4">Contact Number</h3>
-	            <p><a href="tel://1234567920">+ 1235 2355 98</a></p>
+	            <p><a href="tel://1234567920">+91 9048699623</a></p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -615,7 +619,7 @@
           			<span class="icon-paper-plane"></span>
           		</div>
           		<h3 class="mb-4">Email Address</h3>
-	            <p><a href="mailto:info@yoursite.com">info@yoursite.com</a></p>
+	            <p><a href="mailto:amaljoymaliakkal96@gmail.com">amaljoymaliakkal96@gmail.com</a></p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -624,7 +628,7 @@
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-4">Website</h3>
-	            <p><a href="#">yoursite.com</a></p>
+	            <p><a href="https://amaljoymaliakkal.netlify.app/">amaljoymaliakkal.netlify.app</a></p>
 	          </div>
           </div>
         </div>
