--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
  
 
     <section class="ftco-section ftco-project" id="projects-section">
-    	<div class="container">
+    	<!-- <div class="container">
     		<div class="row justify-content-center pb-5">
           <div class="col-md-12 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Projects</h1>
@@ -435,73 +435,74 @@
     				</div>
     			</div>
     		</div>
-    	</div>
-    </section>
+    	</div> -->
 
 
-    <section class="ftco-section" id="blog-section">
-      <div class="container">
-        <div class="row justify-content-center mb-5 pb-5">
-          <div class="col-md-7 heading-section text-center ftco-animate">
-            <h1 class="big big-2">Blog</h1>
-            <h2 class="mb-4">Our Blog</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
-          </div>
-        </div>
-        <div class="row d-flex">
-          <div class="col-md-4 d-flex ftco-animate">
-          	<div class="blog-entry justify-content-end">
-              <a href="single.html" class="block-20" style="background-image: url('images/image_1.jpg');">
-              </a>
-              <div class="text mt-3 float-right d-block">
-              	<div class="d-flex align-items-center mb-3 meta">
-	                <p class="mb-0">
-	                	<span class="mr-2">June 21, 2019</span>
-	                	<a href="#" class="mr-2">Admin</a>
-	                	<a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a>
-	                </p>
-                </div>
-                <h3 class="heading"><a href="single.html">Why Lead Generation is Key for Business Growth</a></h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 d-flex ftco-animate">
-          	<div class="blog-entry justify-content-end">
-              <a href="single.html" class="block-20" style="background-image: url('images/image_2.jpg');">
-              </a>
-              <div class="text mt-3 float-right d-block">
-              	<div class="d-flex align-items-center mb-3 meta">
-	                <p class="mb-0">
-	                	<span class="mr-2">June 21, 2019</span>
-	                	<a href="#" class="mr-2">Admin</a>
-	                	<a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a>
-	                </p>
-                </div>
-                <h3 class="heading"><a href="single.html">Why Lead Generation is Key for Business Growth</a></h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 d-flex ftco-animate">
-          	<div class="blog-entry">
-              <a href="single.html" class="block-20" style="background-image: url('images/image_3.jpg');">
-              </a>
-              <div class="text mt-3 float-right d-block">
-              	<div class="d-flex align-items-center mb-3 meta">
-	                <p class="mb-0">
-	                	<span class="mr-2">June 21, 2019</span>
-	                	<a href="#" class="mr-2">Admin</a>
-	                	<a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a>
-	                </p>
-                </div>
-                <h3 class="heading"><a href="single.html">Why Lead Generation is Key for Business Growth</a></h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+		<div id="portfolio">
+			<div class="container">
+				<div class="row justify-content-center pb-5">
+					<div class="col-md-12 heading-section text-center ftco-animate">
+						<h1 class="big big-2">Projects</h1>
+					  <h2 class="mb-4">Our Projects</h2>
+					  <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+					</div>
+				  </div>
+				<div class="row">
+					<div class="portfolio-col">
+						<img src="images/pf-1.svg">
+						<div class="layer">
+							<h3>App Design</h3>
+							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae animi laboriosam explicabo Lorem ipsum dolor</p>
+							<a href="#"><i class="fa-solid fa-link"></i></a>
+						</div>
+					</div>
+					<div class="portfolio-col">
+						<img src="images/pf-2.svg">
+						<div class="layer">
+							<h3>Shopping App Design</h3>
+							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae animi laboriosam explicabo Lorem ipsum dolor</p>
+							<a href="#"><i class="fa-solid fa-link"></i></a>
+						</div>
+					</div>
+					<div class="portfolio-col">
+						<img src="images/pf-3.svg">
+						<div class="layer">
+							<h3>Reading App Design</h3>
+							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae animi laboriosam explicabo Lorem ipsum dolor</p>
+							<a href="#"><i class="fa-solid fa-link"></i></a>
+						</div>
+					</div>
+				</div>
+
+				<div class="row mt-5">
+					<div class="portfolio-col">
+						<img src="images/pf-1.svg">
+						<div class="layer">
+							<h3>App Design</h3>
+							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae animi laboriosam explicabo Lorem ipsum dolor</p>
+							<a href="#"><i class="fa-solid fa-link"></i></a>
+						</div>
+					</div>
+					<div class="portfolio-col">
+						<img src="images/pf-2.svg">
+						<div class="layer">
+							<h3>Shopping App Design</h3>
+							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae animi laboriosam explicabo Lorem ipsum dolor</p>
+							<a href="#"><i class="fa-solid fa-link"></i></a>
+						</div>
+					</div>
+					<div class="portfolio-col">
+						<img src="images/pf-3.svg">
+						<div class="layer">
+							<h3>Reading App Design</h3>
+							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae animi laboriosam explicabo Lorem ipsum dolor</p>
+							<a href="#"><i class="fa-solid fa-link"></i></a>
+						</div>
+					</div>
+				</div>
+				
+			</div>
+		</div>
     </section>
 
     <section class="ftco-section ftco-no-pt ftco-no-pb ftco-counter img" id="section-counter">
