--- a/index.html
+++ b/index.html
@@ -36,11 +36,12 @@
 	        <ul class="navbar-nav nav ml-auto">
 	          <li class="nav-item"><a href="#home-section" class="nav-link"><span>Home</span></a></li>
 	          <li class="nav-item"><a href="#about-section" class="nav-link"><span>About</span></a></li>
-	          <li class="nav-item"><a href="#resume-section" class="nav-link"><span>Resume</span></a></li>
-	          <li class="nav-item"><a href="#services-section" class="nav-link"><span>Services</span></a></li>
-	          <li class="nav-item"><a href="#skills-section" class="nav-link"><span>Skills</span></a></li>
+	          <li class="nav-item"><a href="#resume-section" class="nav-link"><span>Experience</span></a></li>
+			  <li class="nav-item"><a href="#skills-section" class="nav-link"><span>Skills</span></a></li>
+	          <!-- <li class="nav-item"><a href="#services-section" class="nav-link"><span>Services</span></a></li> -->
+	          <li class="nav-item"><a href="#projects" class="nav-link"><span>Ui Works</span></a></li>
 	          <li class="nav-item"><a href="#projects-section" class="nav-link"><span>Projects</span></a></li>
-	          <li class="nav-item"><a href="#blog-section" class="nav-link"><span>My Blog</span></a></li>
+	          
 	          <li class="nav-item"><a href="#contact-section" class="nav-link"><span>Contact</span></a></li>
 	        </ul>
 	      </div>
@@ -61,7 +62,7 @@
 			            <h1 class="mb-4 mt-3">I'm <span>Amal Joy Maliakkal</span></h1>
 			            <h2 class="mb-4">An UI/UX Developer</h2>
 			            <p><a class="btn btn-primary py-3 px-4 mb-3"  role="button" href="images/Amal_Joy_resume.pdf"
-							download="amal_joy_cv">Download CV</a>  <a href="#" class="btn btn-white btn-outline-white py-3 px-4 mb-3">My works</a></p>
+							download="amal_joy_cv">Download CV</a>  <a href="#projects" class="btn btn-white btn-outline-white py-3 px-4 mb-3">My works</a></p>
 		            </div>
 		          </div>
 	        	</div>
@@ -330,11 +331,11 @@
 
 					<div class="col-md-4 animate-box">
 						<div class="progress-wrap ftco-animate">
-							<h3>React Bootstrap</h3>
+							<h3>Git</h3>
 							<div class="progress">
-							 	<div class="progress-bar color-6" role="progressbar" aria-valuenow="90"
-							  	aria-valuemin="0" aria-valuemax="100" style="width:90%">
-							    <span>90%</span>
+							 	<div class="progress-bar color-6" role="progressbar" aria-valuenow="70"
+							  	aria-valuemin="0" aria-valuemax="100" style="width:70%">
+							    <span>70%</span>
 							  	</div>
 							</div>
 						</div>
@@ -346,7 +347,7 @@
 
 		<section>
 			    	<div class="container">
-    		<div class="row justify-content-center pb-5">
+    		<div class="row justify-content-center pb-5" id="projects">
           <div class="col-md-12 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Projects</h1>
             <h2 class="mb-4">Our Projects</h2>
@@ -538,7 +539,7 @@
 					<div class="col-md-7 ftco-animate text-center">
 						<h2 class="available_text">I'm <span class="available_text">Available</span> for freelancing</h2>
 						<p class="freelance_text">I am available part time as a freelance UI/UX developer.</p>
-						<p class="mb-0 cursor_pointer"><a href="#contact-section" class="btn btn-primary py-3 px-5 hire_me" id="hire_me">Hire me</a></p>
+						<p class="mb-0 cursor_pointer"><a href="#contact-section" class="btn btn-primary py-3 px-5 hire_me" id="hire_me">Contact Me</a></p>
 					</div>
 				</div>
 			</div>
