--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 	          <li class="nav-item"><a href="#resume-section" class="nav-link"><span>Experience</span></a></li>
 			  <li class="nav-item"><a href="#skills-section" class="nav-link"><span>Skills</span></a></li>
 	          <!-- <li class="nav-item"><a href="#services-section" class="nav-link"><span>Services</span></a></li> -->
-	          <li class="nav-item"><a href="#projects" class="nav-link"><span>Ui Works</span></a></li>
-	          <li class="nav-item"><a href="#projects-section" class="nav-link"><span>Projects</span></a></li>
+	          <li class="nav-item"><a href="#projects" class="nav-link"><span>UX Works</span></a></li>
+	          <li class="nav-item"><a href="#projects-section" class="nav-link"><span>UI Works</span></a></li>
 	          
 	          <li class="nav-item"><a href="#contact-section" class="nav-link"><span>Contact</span></a></li>
 	        </ul>
@@ -349,56 +349,56 @@
 			    	<div class="container">
     		<div class="row justify-content-center pb-5" id="projects">
           <div class="col-md-12 heading-section text-center ftco-animate">
-          	<h1 class="big big-2">Projects</h1>
-            <h2 class="mb-4">Our Projects</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+          	<h1 class="big big-2">UX Works</h1>
+            <h2 class="mb-4">My UX Works</h2>
+            <p>These are the links to some of my UX design Works</p>
           </div>
         </div>
     		<div class="row">
     			<div class="col-md-6">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-4.jpg);">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/pg-2.svg);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
-	    					<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-	    					<span>Web Design</span>
+	    					<h3><a href="https://xd.adobe.com/view/64fbda71-dfdd-4a28-825c-aa966e530c5e-31a8/">Photogrator</a></h3>
+	    					<span>Photo capturing and editing application</span>
 	    				</div>
     				</div>
   				</div>
   				<div class="col-md-6">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-5.jpg);">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/phat-2.svg);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
-	    					<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-	    					<span>Web Design</span>
+	    					<h3><a href="https://www.figma.com/file/7lNJot0x7JDweGapW9PrU8/phat-admin-screens?node-id=0%3A1&t=PyzdNZQpUsIsH3J1-1">Phat</a></h3>
+	    					<span>Admin screens</span>
 	    				</div>
     				</div>
   				</div>
 
     			<div class="col-md-6">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-1.jpg);">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/its-4.svg);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
-	    					<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-	    					<span>Web Design</span>
+	    					<h3><a href="https://xd.adobe.com/view/a325bfe1-9627-4036-9533-76bd2e78ac5f-f676/">Its Yours</a></h3>
+	    					<span>Online auction application</span>
 	    				</div>
     				</div>
 
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-6.jpg);">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/case-crush.svg);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
-	    					<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-	    					<span>Web Design</span>
+	    					<h3><a href="https://xd.adobe.com/view/ad346e22-4dcd-4c7b-a7d0-3444fc198029-f867/">Cashcrush</a></h3>
+	    					<span>Lawsuit support</span>
 	    				</div>
     				</div>
     			</div>
     			<div class="col-md-6">
     				<div class="row">
     					<div class="col-md-12">
-		    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-2.jpg);">
+		    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/cupola.svg);">
 		    					<div class="overlay"></div>
 			    				<div class="text text-center p-4">
-			    					<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-			    					<span>Web Design</span>
+			    					<h3><a href="https://xd.adobe.com/view/4a193e1e-0bdd-4638-917a-e3b6ded8455b-1f4a/">Cupola Healthcare</a></h3>
+			    					<span>Medical data analysis</span>
 			    				</div>
 		    				</div>
 	    				</div>
@@ -428,7 +428,7 @@
 					<div class="col-md-12 heading-section text-center ftco-animate">
 						<h1 class="big big-2">UI Works</h1>
 					  <h2 class="mb-4">My UI Works</h2>
-					  <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+					  <p>These are the links to some of my UX design Works</p>
 					</div>
 				  </div>
 				<div class="row">
@@ -436,9 +436,24 @@
 						<div class="shadow_light">
 						<img src="images/pf-1.svg">
 						<div class="layer">
-							<h3>App Design</h3>
-							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae animi laboriosam explicabo Lorem ipsum dolor</p>
-							<a href="#"><i class="fa-solid fa-link"></i></a>
+							<h3>Cosmos</h3>
+							<p>This is a landing page Done Using Next Js and  Tailwind CSS for learning purpose </p>
+							<a href="https://staging.d2qxc83yfhnjum.amplifyapp.com/"><i class="fa-solid fa-link">
+								<svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 29.451 29.455">
+								<g id="link" transform="translate(-0.039 0)">
+								  <g id="Group_16893" data-name="Group 16893" transform="translate(0.039 9.469)">
+									<g id="Group_16892" data-name="Group 16892">
+									  <path id="Path_54073" data-name="Path 54073" d="M18.009,166.626a6.682,6.682,0,0,0-1.153-.928,6.873,6.873,0,0,0-8.565.928l-6.243,6.248a6.872,6.872,0,0,0,9.714,9.723l5.154-5.154a.491.491,0,0,0-.349-.839h-.2A8.262,8.262,0,0,1,13.228,176a.491.491,0,0,0-.535.108l-3.706,3.711a2.947,2.947,0,0,1-4.167-4.167l6.268-6.263a2.945,2.945,0,0,1,4.162,0,2.012,2.012,0,0,0,2.758,0,1.944,1.944,0,0,0,0-2.758Z" transform="translate(-0.039 -164.614)"/>
+									</g>
+								  </g>
+								  <g id="Group_16895" data-name="Group 16895" transform="translate(10.937 0)">
+									<g id="Group_16894" data-name="Group 16894">
+									  <path id="Path_54074" data-name="Path 54074" d="M206.042,2.013a6.872,6.872,0,0,0-9.719,0l-5.149,5.144a.493.493,0,0,0,.358.839h.182a8.246,8.246,0,0,1,3.136.614.491.491,0,0,0,.535-.108l3.7-3.691a2.947,2.947,0,0,1,4.167,4.167l-4.6,4.6-.039.044-1.61,1.6a2.945,2.945,0,0,1-4.162,0,2.012,2.012,0,0,0-2.758,0,1.957,1.957,0,0,0,0,2.768,6.813,6.813,0,0,0,1.963,1.374c.1.049.206.088.309.133s.211.079.314.118.211.074.314.1l.29.079c.2.049.393.088.594.123a6.832,6.832,0,0,0,.731.069h.373l.295-.034c.108,0,.221-.029.349-.029h.167l.339-.049.157-.029.285-.059h.054a6.871,6.871,0,0,0,3.186-1.806l6.248-6.248A6.872,6.872,0,0,0,206.042,2.013Z" transform="translate(-189.502 0)"/>
+									</g>
+								  </g>
+								</g>
+							  </svg>
+							  </i></a>
 						</div>
 					</div>
 					</div>
@@ -448,7 +463,23 @@
 						<div class="layer">
 							<h3>App Design</h3>
 							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae animi laboriosam explicabo Lorem ipsum dolor</p>
-							<a href="#"><i class="fa-solid fa-link"></i></a>
+							<a href="#"><i class="fa-solid fa-link">
+								<svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 29.451 29.455">
+									<g id="link" transform="translate(-0.039 0)">
+									  <g id="Group_16893" data-name="Group 16893" transform="translate(0.039 9.469)">
+										<g id="Group_16892" data-name="Group 16892">
+										  <path id="Path_54073" data-name="Path 54073" d="M18.009,166.626a6.682,6.682,0,0,0-1.153-.928,6.873,6.873,0,0,0-8.565.928l-6.243,6.248a6.872,6.872,0,0,0,9.714,9.723l5.154-5.154a.491.491,0,0,0-.349-.839h-.2A8.262,8.262,0,0,1,13.228,176a.491.491,0,0,0-.535.108l-3.706,3.711a2.947,2.947,0,0,1-4.167-4.167l6.268-6.263a2.945,2.945,0,0,1,4.162,0,2.012,2.012,0,0,0,2.758,0,1.944,1.944,0,0,0,0-2.758Z" transform="translate(-0.039 -164.614)"/>
+										</g>
+									  </g>
+									  <g id="Group_16895" data-name="Group 16895" transform="translate(10.937 0)">
+										<g id="Group_16894" data-name="Group 16894">
+										  <path id="Path_54074" data-name="Path 54074" d="M206.042,2.013a6.872,6.872,0,0,0-9.719,0l-5.149,5.144a.493.493,0,0,0,.358.839h.182a8.246,8.246,0,0,1,3.136.614.491.491,0,0,0,.535-.108l3.7-3.691a2.947,2.947,0,0,1,4.167,4.167l-4.6,4.6-.039.044-1.61,1.6a2.945,2.945,0,0,1-4.162,0,2.012,2.012,0,0,0-2.758,0,1.957,1.957,0,0,0,0,2.768,6.813,6.813,0,0,0,1.963,1.374c.1.049.206.088.309.133s.211.079.314.118.211.074.314.1l.29.079c.2.049.393.088.594.123a6.832,6.832,0,0,0,.731.069h.373l.295-.034c.108,0,.221-.029.349-.029h.167l.339-.049.157-.029.285-.059h.054a6.871,6.871,0,0,0,3.186-1.806l6.248-6.248A6.872,6.872,0,0,0,206.042,2.013Z" transform="translate(-189.502 0)"/>
+										</g>
+									  </g>
+									</g>
+								  </svg>
+
+							</i></a>
 						</div>
 					</div>
 					</div>
@@ -458,7 +489,22 @@
 						<div class="layer">
 							<h3>App Design</h3>
 							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae animi laboriosam explicabo Lorem ipsum dolor</p>
-							<a href="#"><i class="fa-solid fa-link"></i></a>
+							<a href="#"><i class="fa-solid fa-link">
+								<svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 29.451 29.455">
+									<g id="link" transform="translate(-0.039 0)">
+									  <g id="Group_16893" data-name="Group 16893" transform="translate(0.039 9.469)">
+										<g id="Group_16892" data-name="Group 16892">
+										  <path id="Path_54073" data-name="Path 54073" d="M18.009,166.626a6.682,6.682,0,0,0-1.153-.928,6.873,6.873,0,0,0-8.565.928l-6.243,6.248a6.872,6.872,0,0,0,9.714,9.723l5.154-5.154a.491.491,0,0,0-.349-.839h-.2A8.262,8.262,0,0,1,13.228,176a.491.491,0,0,0-.535.108l-3.706,3.711a2.947,2.947,0,0,1-4.167-4.167l6.268-6.263a2.945,2.945,0,0,1,4.162,0,2.012,2.012,0,0,0,2.758,0,1.944,1.944,0,0,0,0-2.758Z" transform="translate(-0.039 -164.614)"/>
+										</g>
+									  </g>
+									  <g id="Group_16895" data-name="Group 16895" transform="translate(10.937 0)">
+										<g id="Group_16894" data-name="Group 16894">
+										  <path id="Path_54074" data-name="Path 54074" d="M206.042,2.013a6.872,6.872,0,0,0-9.719,0l-5.149,5.144a.493.493,0,0,0,.358.839h.182a8.246,8.246,0,0,1,3.136.614.491.491,0,0,0,.535-.108l3.7-3.691a2.947,2.947,0,0,1,4.167,4.167l-4.6,4.6-.039.044-1.61,1.6a2.945,2.945,0,0,1-4.162,0,2.012,2.012,0,0,0-2.758,0,1.957,1.957,0,0,0,0,2.768,6.813,6.813,0,0,0,1.963,1.374c.1.049.206.088.309.133s.211.079.314.118.211.074.314.1l.29.079c.2.049.393.088.594.123a6.832,6.832,0,0,0,.731.069h.373l.295-.034c.108,0,.221-.029.349-.029h.167l.339-.049.157-.029.285-.059h.054a6.871,6.871,0,0,0,3.186-1.806l6.248-6.248A6.872,6.872,0,0,0,206.042,2.013Z" transform="translate(-189.502 0)"/>
+										</g>
+									  </g>
+									</g>
+								  </svg>
+							</i></a>
 						</div>
 					</div>
 					</div>
@@ -471,7 +517,22 @@
 						<div class="layer">
 							<h3>App Design</h3>
 							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae animi laboriosam explicabo Lorem ipsum dolor</p>
-							<a href="#"><i class="fa-solid fa-link"></i></a>
+							<a href="#"><i class="fa-solid fa-link">
+								<svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 29.451 29.455">
+									<g id="link" transform="translate(-0.039 0)">
+									  <g id="Group_16893" data-name="Group 16893" transform="translate(0.039 9.469)">
+										<g id="Group_16892" data-name="Group 16892">
+										  <path id="Path_54073" data-name="Path 54073" d="M18.009,166.626a6.682,6.682,0,0,0-1.153-.928,6.873,6.873,0,0,0-8.565.928l-6.243,6.248a6.872,6.872,0,0,0,9.714,9.723l5.154-5.154a.491.491,0,0,0-.349-.839h-.2A8.262,8.262,0,0,1,13.228,176a.491.491,0,0,0-.535.108l-3.706,3.711a2.947,2.947,0,0,1-4.167-4.167l6.268-6.263a2.945,2.945,0,0,1,4.162,0,2.012,2.012,0,0,0,2.758,0,1.944,1.944,0,0,0,0-2.758Z" transform="translate(-0.039 -164.614)"/>
+										</g>
+									  </g>
+									  <g id="Group_16895" data-name="Group 16895" transform="translate(10.937 0)">
+										<g id="Group_16894" data-name="Group 16894">
+										  <path id="Path_54074" data-name="Path 54074" d="M206.042,2.013a6.872,6.872,0,0,0-9.719,0l-5.149,5.144a.493.493,0,0,0,.358.839h.182a8.246,8.246,0,0,1,3.136.614.491.491,0,0,0,.535-.108l3.7-3.691a2.947,2.947,0,0,1,4.167,4.167l-4.6,4.6-.039.044-1.61,1.6a2.945,2.945,0,0,1-4.162,0,2.012,2.012,0,0,0-2.758,0,1.957,1.957,0,0,0,0,2.768,6.813,6.813,0,0,0,1.963,1.374c.1.049.206.088.309.133s.211.079.314.118.211.074.314.1l.29.079c.2.049.393.088.594.123a6.832,6.832,0,0,0,.731.069h.373l.295-.034c.108,0,.221-.029.349-.029h.167l.339-.049.157-.029.285-.059h.054a6.871,6.871,0,0,0,3.186-1.806l6.248-6.248A6.872,6.872,0,0,0,206.042,2.013Z" transform="translate(-189.502 0)"/>
+										</g>
+									  </g>
+									</g>
+								  </svg>
+							</i></a>
 						</div>
 					</div>
 					</div>
@@ -481,7 +542,22 @@
 						<div class="layer">
 							<h3>App Design</h3>
 							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae animi laboriosam explicabo Lorem ipsum dolor</p>
-							<a href="#"><i class="fa-solid fa-link"></i></a>
+							<a href="#"><i class="fa-solid fa-link">
+								<svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 29.451 29.455">
+									<g id="link" transform="translate(-0.039 0)">
+									  <g id="Group_16893" data-name="Group 16893" transform="translate(0.039 9.469)">
+										<g id="Group_16892" data-name="Group 16892">
+										  <path id="Path_54073" data-name="Path 54073" d="M18.009,166.626a6.682,6.682,0,0,0-1.153-.928,6.873,6.873,0,0,0-8.565.928l-6.243,6.248a6.872,6.872,0,0,0,9.714,9.723l5.154-5.154a.491.491,0,0,0-.349-.839h-.2A8.262,8.262,0,0,1,13.228,176a.491.491,0,0,0-.535.108l-3.706,3.711a2.947,2.947,0,0,1-4.167-4.167l6.268-6.263a2.945,2.945,0,0,1,4.162,0,2.012,2.012,0,0,0,2.758,0,1.944,1.944,0,0,0,0-2.758Z" transform="translate(-0.039 -164.614)"/>
+										</g>
+									  </g>
+									  <g id="Group_16895" data-name="Group 16895" transform="translate(10.937 0)">
+										<g id="Group_16894" data-name="Group 16894">
+										  <path id="Path_54074" data-name="Path 54074" d="M206.042,2.013a6.872,6.872,0,0,0-9.719,0l-5.149,5.144a.493.493,0,0,0,.358.839h.182a8.246,8.246,0,0,1,3.136.614.491.491,0,0,0,.535-.108l3.7-3.691a2.947,2.947,0,0,1,4.167,4.167l-4.6,4.6-.039.044-1.61,1.6a2.945,2.945,0,0,1-4.162,0,2.012,2.012,0,0,0-2.758,0,1.957,1.957,0,0,0,0,2.768,6.813,6.813,0,0,0,1.963,1.374c.1.049.206.088.309.133s.211.079.314.118.211.074.314.1l.29.079c.2.049.393.088.594.123a6.832,6.832,0,0,0,.731.069h.373l.295-.034c.108,0,.221-.029.349-.029h.167l.339-.049.157-.029.285-.059h.054a6.871,6.871,0,0,0,3.186-1.806l6.248-6.248A6.872,6.872,0,0,0,206.042,2.013Z" transform="translate(-189.502 0)"/>
+										</g>
+									  </g>
+									</g>
+								  </svg>
+							</i></a>
 						</div>
 					</div>
 					</div>
@@ -491,7 +567,22 @@
 						<div class="layer">
 							<h3>App Design</h3>
 							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae animi laboriosam explicabo Lorem ipsum dolor</p>
-							<a href="#"><i class="fa-solid fa-link"></i></a>
+							<a href="#"><i class="fa-solid fa-link">
+								<svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 29.451 29.455">
+									<g id="link" transform="translate(-0.039 0)">
+									  <g id="Group_16893" data-name="Group 16893" transform="translate(0.039 9.469)">
+										<g id="Group_16892" data-name="Group 16892">
+										  <path id="Path_54073" data-name="Path 54073" d="M18.009,166.626a6.682,6.682,0,0,0-1.153-.928,6.873,6.873,0,0,0-8.565.928l-6.243,6.248a6.872,6.872,0,0,0,9.714,9.723l5.154-5.154a.491.491,0,0,0-.349-.839h-.2A8.262,8.262,0,0,1,13.228,176a.491.491,0,0,0-.535.108l-3.706,3.711a2.947,2.947,0,0,1-4.167-4.167l6.268-6.263a2.945,2.945,0,0,1,4.162,0,2.012,2.012,0,0,0,2.758,0,1.944,1.944,0,0,0,0-2.758Z" transform="translate(-0.039 -164.614)"/>
+										</g>
+									  </g>
+									  <g id="Group_16895" data-name="Group 16895" transform="translate(10.937 0)">
+										<g id="Group_16894" data-name="Group 16894">
+										  <path id="Path_54074" data-name="Path 54074" d="M206.042,2.013a6.872,6.872,0,0,0-9.719,0l-5.149,5.144a.493.493,0,0,0,.358.839h.182a8.246,8.246,0,0,1,3.136.614.491.491,0,0,0,.535-.108l3.7-3.691a2.947,2.947,0,0,1,4.167,4.167l-4.6,4.6-.039.044-1.61,1.6a2.945,2.945,0,0,1-4.162,0,2.012,2.012,0,0,0-2.758,0,1.957,1.957,0,0,0,0,2.768,6.813,6.813,0,0,0,1.963,1.374c.1.049.206.088.309.133s.211.079.314.118.211.074.314.1l.29.079c.2.049.393.088.594.123a6.832,6.832,0,0,0,.731.069h.373l.295-.034c.108,0,.221-.029.349-.029h.167l.339-.049.157-.029.285-.059h.054a6.871,6.871,0,0,0,3.186-1.806l6.248-6.248A6.872,6.872,0,0,0,206.042,2.013Z" transform="translate(-189.502 0)"/>
+										</g>
+									  </g>
+									</g>
+								  </svg>
+							</i></a>
 						</div>
 					</div>
 					</div>
