--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
 
 		<section>
 			    	<div class="container">
-    		<div class="row justify-content-center pb-5" id="projects">
+    		<div class="row justify-content-center pb-5 rounder-raduisu-images" id="projects">
           <div class="col-md-12 heading-section text-center ftco-animate">
           	<h1 class="big big-2">UX Works</h1>
             <h2 class="mb-4">My UX Works</h2>
@@ -356,7 +356,7 @@
         </div>
     		<div class="row">
     			<div class="col-md-6">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/pg-2.svg);">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/pg-2.svg);border-radius: 10px;">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
 	    					<h3><a href="https://xd.adobe.com/view/64fbda71-dfdd-4a28-825c-aa966e530c5e-31a8/">Photogrator</a></h3>
@@ -364,18 +364,19 @@
 	    				</div>
     				</div>
   				</div>
+				 
   				<div class="col-md-6">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/phat-2.svg);">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/showreel.svg);border-radius: 10px;">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
-	    					<h3><a href="https://www.figma.com/file/7lNJot0x7JDweGapW9PrU8/phat-admin-screens?node-id=0%3A1&t=PyzdNZQpUsIsH3J1-1">Phat</a></h3>
+	    					<h3><a href=" https://xd.adobe.com/view/158c45b6-b289-4b13-a029-7d4aad5ae35e-40df/">Showreel</a></h3>
 	    					<span>Admin screens</span>
 	    				</div>
     				</div>
   				</div>
 
     			<div class="col-md-6">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/its-4.svg);">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/its-4.svg);border-radius: 10px;">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
 	    					<h3><a href="https://xd.adobe.com/view/a325bfe1-9627-4036-9533-76bd2e78ac5f-f676/">Its Yours</a></h3>
@@ -383,7 +384,7 @@
 	    				</div>
     				</div>
 
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/case-crush.svg);">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/case-crush.svg);border-radius: 10px;">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
 	    					<h3><a href="https://xd.adobe.com/view/ad346e22-4dcd-4c7b-a7d0-3444fc198029-f867/">Cashcrush</a></h3>
@@ -394,7 +395,7 @@
     			<div class="col-md-6">
     				<div class="row">
     					<div class="col-md-12">
-		    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/cupola.svg);">
+		    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/cupola.svg);border-radius: 10px;">
 		    					<div class="overlay"></div>
 			    				<div class="text text-center p-4">
 			    					<h3><a href="https://xd.adobe.com/view/4a193e1e-0bdd-4638-917a-e3b6ded8455b-1f4a/">Cupola Healthcare</a></h3>
@@ -403,11 +404,11 @@
 		    				</div>
 	    				</div>
 	    				<div class="col-md-12">
-		    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-3.jpg);">
+		    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/phat-2.svg);border-radius: 10px;">
 		    					<div class="overlay"></div>
 			    				<div class="text text-center p-4">
-			    					<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-			    					<span>Web Design</span>
+			    					<h3><a href="https://www.figma.com/file/7lNJot0x7JDweGapW9PrU8/phat-admin-screens?node-id=0%3A1&t=PyzdNZQpUsIsH3J1-1">Phat</a></h3>
+			    					<span>Admin screens</span>
 			    				</div>
 		    				</div>
 	    				</div>
@@ -461,9 +462,9 @@
 						<div class="shadow_light">
 						<img src="images/pf-2.svg">
 						<div class="layer">
-							<h3>App Design</h3>
-							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae animi laboriosam explicabo Lorem ipsum dolor</p>
-							<a href="#"><i class="fa-solid fa-link">
+							<h3>sportshare</h3>
+							<p>This is a sports equipment rental platform which has created using HTML,Bootstrap and CSS</p>
+							<a href="https://www.sportshare.com/"><i class="fa-solid fa-link">
 								<svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 29.451 29.455">
 									<g id="link" transform="translate(-0.039 0)">
 									  <g id="Group_16893" data-name="Group 16893" transform="translate(0.039 9.469)">
@@ -487,9 +488,9 @@
 						<div class="shadow_light">
 						<img src="images/pf-3.svg">
 						<div class="layer">
-							<h3>App Design</h3>
-							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae animi laboriosam explicabo Lorem ipsum dolor</p>
-							<a href="#"><i class="fa-solid fa-link">
+							<h3>Truckio</h3>
+							<p>This is a landing page which has created using Next js and React bootstrap for learning purpose</p>
+							<a href="https://truckio-landing-page.vercel.app/"><i class="fa-solid fa-link">
 								<svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 29.451 29.455">
 									<g id="link" transform="translate(-0.039 0)">
 									  <g id="Group_16893" data-name="Group 16893" transform="translate(0.039 9.469)">
@@ -513,11 +514,11 @@
 				<div class="row mt-5">
 					<div class="portfolio-col">
 						<div class="shadow_light">
-						<img src="images/pf-1.svg">
+						<img src="images/liuyay.svg">
 						<div class="layer">
-							<h3>App Design</h3>
-							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae animi laboriosam explicabo Lorem ipsum dolor</p>
-							<a href="#"><i class="fa-solid fa-link">
+							<h3>Liuyay</h3>
+							<p>This is an eventbooking and Buisness Promotion platform which has created using HTML,Bootstrap and Css</p>
+							<a href="https://www.liuyay.com/"><i class="fa-solid fa-link">
 								<svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 29.451 29.455">
 									<g id="link" transform="translate(-0.039 0)">
 									  <g id="Group_16893" data-name="Group 16893" transform="translate(0.039 9.469)">
@@ -538,11 +539,11 @@
 					</div>
 					<div class="portfolio-col">
 						<div class="shadow_light">
-						<img src="images/pf-1.svg">
+						<img src="images/pf-5.svg">
 						<div class="layer">
-							<h3>App Design</h3>
-							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae animi laboriosam explicabo Lorem ipsum dolor</p>
-							<a href="#"><i class="fa-solid fa-link">
+							<h3>Codeventures</h3>
+							<p>This is an inhouse projects used by the sales and support team of Armia</p>
+							<a href="https://www.codeventures.com/"><i class="fa-solid fa-link">
 								<svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 29.451 29.455">
 									<g id="link" transform="translate(-0.039 0)">
 									  <g id="Group_16893" data-name="Group 16893" transform="translate(0.039 9.469)">
@@ -563,11 +564,11 @@
 					</div>
 					<div class="portfolio-col">
 						<div class="shadow_light">
-						<img src="images/pf-1.svg">
+						<img src="images/pf-6.svg">
 						<div class="layer">
-							<h3>App Design</h3>
-							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae animi laboriosam explicabo Lorem ipsum dolor</p>
-							<a href="#"><i class="fa-solid fa-link">
+							<h3>Railfactor</h3>
+							<p>This is  the largest online networking platform for railway professionals.</p>
+							<a href="https://www.railfactor.com/"><i class="fa-solid fa-link">
 								<svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 29.451 29.455">
 									<g id="link" transform="translate(-0.039 0)">
 									  <g id="Group_16893" data-name="Group 16893" transform="translate(0.039 9.469)">
