--- a/index.html
+++ b/index.html
@@ -187,7 +187,8 @@
     		</div>
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-    				<p><a href="#" class="btn btn-primary py-4 px-5">Download CV</a></p>
+    				<p><a  class="btn btn-primary py-4 px-5" role="button" href="images/Amal_Joy_resume.pdf"
+						download="amal_joy_cv">Download CV</a></p>
     			</div>
     		</div>
     	</div>
@@ -429,7 +430,7 @@
 					<div class="col-md-12 heading-section text-center ftco-animate">
 						<h1 class="big big-2">UI Works</h1>
 					  <h2 class="mb-4">My UI Works</h2>
-					  <p>These are the links to some of my UX design Works</p>
+					  <p>These are the links to some of my Ui design Works</p>
 					</div>
 				  </div>
 				<div class="row">
@@ -726,9 +727,9 @@
               <h2 class="ftco-heading-2">About</h2>
               <p>An energetic, Passionate,commited and eager to learn UI/UX Developer with 2+ years of experience.</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-3">
-                <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-                <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-                <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
+                <!-- <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li> -->
+                <li class="ftco-animate"><a href="https://www.facebook.com/amal.joy.562"><span class="icon-facebook"></span></a></li>
+                <li class="ftco-animate"><a href="https://www.instagram.com/amalmaliakkal/"><span class="icon-instagram"></span></a></li>
               </ul>
             </div>
           </div>
@@ -738,19 +739,19 @@
               <ul class="list-unstyled">
                 <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Home</a></li>
                 <li><a href="#about-section"><span class="icon-long-arrow-right mr-2"></span>About</a></li>
-                <li><a href="#services-section"><span class="icon-long-arrow-right mr-2"></span>Services</a></li>
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Projects</a></li>
+                <li><a href="#resume-section"><span class="icon-long-arrow-right mr-2"></span>Experience</a></li>
+               
                 <li><a href="#contact-section"><span class="icon-long-arrow-right mr-2"></span>Contact</a></li>
               </ul>
             </div>
           </div>
           <div class="col-md">
              <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2">Services</h2>
+              <h2 class="ftco-heading-2">Works</h2>
               <ul class="list-unstyled">
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Web Design</a></li>
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Web Development</a></li>
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Branding</a></li>
+                <li><a href="#projects-section"><span class="icon-long-arrow-right mr-2"></span>UI Works</a></li>
+                <li><a href="#projects"><span class="icon-long-arrow-right mr-2"></span>UX Works</a></li>
+              
               </ul>
             </div>
           </div>
